# Solace

./: CMakeLists.txt  CMakePresets.json  README.md
Core/: CMakeLists.txt
Core/include/: Application.h
Core/src/: Application.cpp
Demo/: CMakeLists.txt
Demo/include/: Demo.h
Demo/resources/shaders/: Fragment.glsl  Vertex.glsl
Demo/src/: Demo.cpp
Editor/: CMakeLists.txt
Editor/include/: CameraInspector.h  ComponentInspector.h  Editor.h  EditorProperty.h  EditorSystem.h  InspectorRegistry.h  TransformInspector.h  ViewportWindow.h
Editor/include/Core/: Editor.h  EditorSystem.h  Fonts.h  ModuleLoader.h  ProjectManager.h  Undo.h
Editor/include/Inspectors/: CameraInspector.h  ComponentInspector.h  EditorProperty.h  InspectorRegistry.h  LightInspector.h  MeshRenderInspector.h  TransformInspector.h
Editor/include/Menu/: EditMenu.h  FileMenu.h  LayoutMenu.h  MenuRegistry.h
Editor/include/Windows/: AssetBrowser.h  EditorWindow.h  GameViewport.h  Gizmos.h  InspectorWindow.h  MaterialWindow.h  SceneHierarchy.h  SceneViewport.h
Editor/resources/Layouts/: Default.ini
Editor/resources/shaders/: Fragment.glsl  ShadowVert.glsl  Vertex.glsl
Editor/src/: CameraInspector.cpp  ComponentInspector.cpp  Editor.cpp  EditorSystem.cpp  TransformInspector.cpp  ViewportWindow.cpp
Editor/src/Core/: Editor.cpp  EditorSystem.cpp  Fonts.cpp  ModuleLoader.cpp  ProjectManager.cpp  Undo.cpp
Editor/src/Inspectors/: CameraInspector.cpp  ComponentInspector.cpp  LightInspector.cpp  MeshRenderInspector.cpp  TransformInspector.cpp
Editor/src/Menu/: EditMenu.cpp  FileMenu.cpp  LayoutMenu.cpp
Editor/src/Windows/: AssetBrowser.cpp  EditorWindow.cpp  GameViewport.cpp  InspectorWindow.cpp  MaterialWindow.cpp  SceneHierarchy.cpp  SceneViewport.cpp
Engine/: CMakeLists.txt
Engine/include/Assets/: AssetCache.h  AssetHandle.h  AssetRegistry.h  MaterialAssetCache.h  MaterialSerialiser.h  TextureAssetCache.h
Engine/include/Core/: Application.h  EntryPoint.h  Subsystem.h
Engine/include/ECS/: ECSManager.h  System.h
Engine/include/Events/: Event.h  EventSystem.h
Engine/include/Input/: InputSystem.h  KeyCodes.h
Engine/include/Reflection/: ComponentReflection.h  Property.h  PropertyAttributes.h  PropertyType.h  Reflection.h  ReflectionModule.h  ReflectionRegistry.h  TypeID.h
Engine/include/Rendering/: Camera.h  Colour.h  FBO.h  FrameRenderData.h  Light.h  Material.h  Mesh.h  MeshRender.h  RenderSystem.h  Shader.h  ShaderDataTypes.h  Texture.h  TextureUnitAllocator.h  UBO.h  VAO.h  Window.h
Engine/include/Scenes/: DefaultScene.h  NameComponent.h  OrderComponent.h  Scene.h  SceneSerialiser.h  SceneSystem.h
Engine/include/Transform/: Transform.h
Engine/src/Assets/: AssetCache.cpp  AssetRegistry.cpp  MaterialAssetCache.cpp  MaterialSerialiser.cpp  TextureAssetCache.cpp
Engine/src/Core/: Application.cpp
Engine/src/ECS/: ECSManager.cpp
Engine/src/Events/: EventSystem.cpp
Engine/src/Input/: InputSystem.cpp
Engine/src/Reflection/: PropertyAttributes.cpp
Engine/src/Rendering/: Camera.cpp  FBO.cpp  Material.cpp  MeshRender.cpp  RenderSystem.cpp  Shader.cpp  ShaderDataTypes.cpp  Texture.cpp  TextureUnitAllocator.cpp  UBO.cpp  VAO.cpp  Window.cpp
Engine/src/Scenes/: Scene.cpp  SceneSerialiser.cpp  SceneSystem.cpp
Solace-Core/: CMakeLists.txt
Solace-Core/include/: EntryPoint.h
docs/: TDD.md
